# template_ninja

./: .gitignore  QUICKSTART.md  README.md  app.py  requirements.txt  test_resume.docx
backend/: pyproject.toml
backend/app/: __main__.py  config.py  main.py
backend/app/api/: __init__.py  blueprints.py  deps.py  generation.py  templates.py
backend/app/models/: __init__.py  blueprint.py  content.py  template.py
backend/app/services/: __init__.py  extractor.py  generator.py  template_service.py
backend/app/storage/: __init__.py  template_store.py
backend/tests/: test_extractor.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/smoke-test/: page.tsx
frontend/src/lib/: types.ts
generator/: pdf_builder.py
output/: resume_dd.docx
parsers/: docx_parser.py  pdf_parser.py  template_analyzer.py  template_blueprint.py
storage/: template_storage.py
templates/: builder.html  index.html
templates_store/: templates_metadata.json
templates_store/05fc68e7-fbed-4aec-9058-62cd2010692f/: blueprint.json  styles.json
